--- a/src/less/modules/fonts.less
+++ b/src/less/modules/fonts.less
@@ -13,3 +13,44 @@
   font-weight: bold;
   font-style: normal;
 }
+
+h1 {
+  line-height: 72px;
+  font-size: 72px;
+  padding: 20px 30px 0px 30px;
+}
+
+h2 {
+  line-height: 36px;
+  font-size: 36px;
+  padding: 0px 30px 20px 30px;
+}
+
+h3 {
+  margin: 25px 0;
+  height: 36px;
+  font-size: 36px;
+  color: #414344;
+  padding: 8px 0 0 0;
+}
+
+h1, h2 {
+  font-family: 'BebasNeueBold';
+  color: #E8E1D8;
+  background: #3b9aa0;
+  font-weight: normal;
+  margin: 0;
+}
+
+h2.cv-title {
+  color: #E8E1D8;
+  background: #414344;
+  padding: 10px 30px 10px 30px;
+}
+
+ul li {
+  list-style: none;
+  font-family: Arial;
+  font-size: 16px;
+  line-height: 20px;
+}
