--- a/src/less/modules/fonts.less
+++ b/src/less/modules/fonts.less
@@ -27,11 +27,17 @@ h2 {
 }
 
 h3 {
-  margin: 25px 0;
+  margin: 20px 0 40px;
   height: 36px;
   font-size: 36px;
   color: #414344;
   padding: 8px 0 0 0;
+}
+
+h4 {
+  font-size: 24px;
+  line-height: 24px;
+  font-family: 'BebasNeueBold'
 }
 
 h1, h2 {
@@ -40,6 +46,10 @@ h1, h2 {
   background: #3b9aa0;
   font-weight: normal;
   margin: 0;
+}
+
+h1, h2, h3, h4 {
+  text-transform: uppercase;
 }
 
 h2.cv-title {
