--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -14,19 +14,26 @@ body {
     background: @bg-inner;
     padding: 0px 30px 20px 30px;
     position: relative;
-    h3:before {
-      content: ' ';
-      background-image: url('/img/header_arrow.svg');
-      width: 46px;
-      height: 39px;
-      display: inline-block;
-      background-repeat: no-repeat;
+    h3 {
+      .icon-arrow {
+        background-image: url('/img/header_arrow.png');
+        width: 46px;
+        height: 46px;
+        display: inline-block;
+        background-repeat: no-repeat;
+      }
+      p {
+        border-bottom: 3px solid #D5C1AA;
+        display: inline-block;
+        width: 400px;
+        margin: 15px 17px;
+      }
     }
   }
   .cv-personal {
     margin-top: -25px;
     width: 560px;
-    img {
+    > img {
       position: absolute;
       top: 0;
       right: 0;
@@ -36,32 +43,156 @@ body {
       max-height: 500px;
     }
     ul {
-      li:before {
-        content: " ";
-        display: inline-block;
-        background-repeat: no-repeat;
-        height: 56px;
-        width: 30px;
-      }
-      li:first-child:before {
-        background-image: url('/img/personal_icon.svg');
-      }
-      li:nth-child(2) {
-        color: yellow;
-      }
-      li:nth-child(3) {
-        color: red;
-      }
-      li:nth-child(4) {
-        color: red;
-      }
-      li:nth-child(5) {
-        color: red;
-      }
-      li:last-child {
-        color: blue;
+      padding-left: 15px;
+      margin-top: 35px;
+      li {
+        margin: 10px 0;
+        padding: 10px 20px;
+        span {
+          margin: 0 50px;
+        }
+        &.birth {
+          background: url('/img/birth.png') 15px 0px;
+          background-repeat: no-repeat;
+        }
+        &.address {
+          background: url('/img/address.png') 6px 0px;
+          background-repeat: no-repeat;
+        }
+        &.phone {
+          background: url('/img/phone.png') 12px 0px;
+          background-repeat: no-repeat;
+        }
+        &.www {
+          background: url('/img/www.png') 0px 0px;
+          background-repeat: no-repeat;
+        }
+        &.email {
+          background: url('/img/email.png') 3px 0px;
+          background-repeat: no-repeat;
+        }
       }
     }
 
   }
+  .cv-profile {
+    position: relative;
+    .profile-bg {
+      position: absolute;
+      top: 30px;
+      right: 0;
+      width: 270px;
+      height: 270px;
+    }
+    ul {
+      width: 470px;
+      li {
+        float: left;
+        margin: 5px 3px;
+        border: 1px solid #D5C1AA;
+        padding: 2px 5px;
+        -webkit-border-radius: 2px;
+        -moz-border-radius: 2px;
+        border-radius: 2px;
+      }
+    }
+  }
+  .cv-experiance, .cv-education {
+    clear: both;
+    ul {
+      margin: 0;
+      padding: 0;
+      li {
+        clear: both;
+        min-height: 180px;
+        width: 100%;
+        position: relative;
+        &:nth-child(2n) .ribbon {
+          background:#3b9aa0;
+          &:after {
+            border: solid 25px #3b9aa0;
+            border-bottom-color: transparent;
+          }
+        }
+        .ribbon {
+          float: left;
+          margin-right: 15px;
+          background: #414344;
+          width: 50px;
+          height: 130px;
+          position: relative;
+          color: #fff;
+          line-height: 27px;
+          border: 0;
+          span {
+            transform: rotate(90deg);
+            transform-origin: left top 0;
+            float: left;
+            max-width: 100px;
+            width: 112px;
+            margin-left: 36px;
+            margin-top: 10px;
+            font-size: 24px;
+            font-family: 'BebasNeue';
+            letter-spacing: 2px;
+          }
+          &:after {
+            content: "";
+            position: absolute;
+            bottom: -26px;
+            left: 0;
+            height: 0;
+            width: 0;
+            border: solid 25px #414344;
+            border-bottom-color: transparent;
+          }
+        }
+        .cv-info {
+          float: left;
+          width: 550px;
+          p {
+            margin: 15px 0;
+            padding: 0 0 5px;
+          }
+        }
+        .cv-position {
+          position: absolute;
+          background: url('/img/experiance.png') right top;
+          background-repeat: no-repeat;
+          width: 210px;
+          height: 100px;
+          top: 0;
+          right: 0;
+          span {
+            margin-top: 100px;
+            text-transform: uppercase;
+            font-family:'BebasNeueBold';
+            color: #BCAC96;
+            font-size: 24px;
+            position: absolute;
+            top: 0;
+            right: 0;
+          }
+        }
+        .cv-time {
+          color: #978D7D;
+          margin: 2px 0;
+          padding: 0;
+        }
+        .cv-company {
+          margin: 2px 0;
+          padding: 0;
+        }
+      }
+    }
+  }
+  .cv-education {
+    clear: both;
+    .cv-position {
+       background: url('/img/education.png') right top !important;
+       background-repeat: no-repeat !important;
+    }
+  }
 }
+
+
