hack for one page print

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -3,16 +3,18 @@
 body {
   background: url('/img/bg.jpg');
   font-family: BebasNeue, Arial;
+  font-size: 12px;
+  zoom: 85%;
 }
 
 .cv-container {
   background: @bg;
   width: 890px;
-  margin: 20px auto;
-  padding: 30px;
+  margin: 15px auto;
+  padding: 15px;
   .cv-main {
     background: @bg-inner;
-    padding: 0px 30px 20px 30px;
+    padding: 0px 20px 10px 20px;
     position: relative;
     h3 {
       .icon-arrow {
@@ -26,7 +28,7 @@ body {
         border-bottom: 3px solid #D5C1AA;
         display: inline-block;
         width: 400px;
-        margin: 15px 17px;
+        margin: 5px 17px;
       }
     }
   }
@@ -44,7 +46,7 @@ body {
     }
     ul {
       padding-left: 15px;
-      margin-top: 35px;
+      margin-top: 5px;
       li {
         margin: 10px 0;
         padding: 10px 20px;
@@ -81,8 +83,8 @@ body {
       position: absolute;
       top: 30px;
       right: 0;
-      width: 270px;
-      height: 270px;
+      width: 230px;
+      height: 230px;
     }
     ul {
       width: 470px;
@@ -104,7 +106,7 @@ body {
       padding: 0;
       li {
         clear: both;
-        min-height: 180px;
+        min-height: 150px;
         width: 100%;
         position: relative;
         &:nth-child(2n) .ribbon {
@@ -119,7 +121,7 @@ body {
           margin-right: 15px;
           background: #414344;
           width: 50px;
-          height: 130px;
+          height: 110px;
           position: relative;
           color: #fff;
           line-height: 27px;
@@ -132,7 +134,7 @@ body {
             width: 112px;
             margin-left: 36px;
             margin-top: 10px;
-            font-size: 24px;
+            font-size: 18px;
             font-family: 'BebasNeue';
             letter-spacing: 2px;
           }
@@ -151,7 +153,7 @@ body {
           float: left;
           width: 550px;
           p {
-            margin: 15px 0;
+            margin: 10px 0;
             padding: 0 0 5px;
           }
         }
@@ -168,7 +170,7 @@ body {
             text-transform: uppercase;
             font-family:'BebasNeueBold';
             color: #BCAC96;
-            font-size: 24px;
+            font-size: 18px;
             position: absolute;
             top: 0;
             right: 0;
